--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ projects:
   # hackerrank: your_username
   # instagram: your_username
   # keybase: your_username
-  # linkedin: your_username
+  # linkedin: https://www.linkedin.com/in/sidharth-singh-606a6a123/?lipi=urn%3Ali%3Apage%3Ad_flagship3_jobs_discovery_jymbii%3BwUDaQRejTmaSjVvdDxPJGw%3D%3D
   # mastodon: your_username
   # medium: your_username
   # stackoverflow: your_user_id
